--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
-    "express": "^4.17.1"
+    "@types/express": "^4.17.5",
+    "@types/node": "^13.11.0",
+    "@types/superagent": "^4.1.7",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.2",
+    "express": "^4.17.1",
+    "superagent": "^5.2.2",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
   }
 }
