--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.5",
     "@types/node": "^13.11.0",
     "@types/superagent": "^4.1.7",
+    "cors": "^2.8.5",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "express": "^4.17.1",
