--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.5",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.11.0",
     "@types/superagent": "^4.1.7",
     "cors": "^2.8.5",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
+    "node-cache": "^5.1.0",
     "superagent": "^5.2.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
