--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "superagent": "^5.2.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "start": "npx nodemon index.ts"
   }
 }
